# AlphaAgent

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: demo.py  demo_sec_rag.py  seed_rag.py
src/: config.py
src/agent/: graph.py  prompts.py  state.py
src/agent/nodes/: critic.py  planner.py  synthesizer.py  tool_executor.py
src/api/: dependencies.py  main.py  schemas.py
src/tools/: fundamentals.py  macro.py  market_data.py  news_sentiment.py  ratio_calculator.py  sec_edgar.py  sec_rag.py  technical.py
src/ui/: app.py
tests/test_agent/: test_graph_e2e.py  test_planner.py  test_synthesizer.py
tests/test_api/: test_endpoints.py
tests/test_tools/: test_fundamentals.py  test_macro.py  test_market_data.py  test_news_sentiment.py  test_ratio_calculator.py  test_sec_edgar.py  test_sec_rag.py  test_technical.py
